upgrade of animation, and add of fix

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="text">
             <div class="name">St4r</div>
-            <div class="slogan"><script src="script.js"></script></div>
+            <div class="slogan">><script src="script.js"></script></div>
         </div>
     </header>
 </body>
