Modify of the menu and very basic addition in projects

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
         </div>
         <div class="text">
             <div class="name">St4r</div>
-            <div class="comment"># press enter to open menu</div>
-            <div class="sloganBox"><p>></p><p class="slogan"></p></div>
-            <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-            <script type="module" src="script.js"></script>
+            <nav>
+                <div class="comment"># press enter to open menu</div>
+                <div class="sloganBox"><p>></p><p class="slogan"></p></div>
+            </nav>
         </div>
     </header>
+    <script src="node_modules/typewriter-effect/dist/core.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
