Added the page : about, contact, credits.

--- a/index.html
+++ b/index.html
@@ -4,52 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="font.css">
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="img/logo/Logo St4r black.svg">
     <title>St4r</title>
 </head>
-<body>
-    <header>
+<body style="text-align: start;">
+    <section class="hero-section">
         <div class="logo">
-            <pre class="logo-text">
-                         ::                         
-                         ::                         
-                         ::                         
-                        ::::                        
-                        :::-                        
-                       ::----                       
-                       :------                      
-                      ------==                      
-                     -----=====                     
-                   :-----=====++=                   
-                 :-----======+++++=                 
-             ::------======++++++*****              
-        :::::------======++++++******####**#        
-  .::::::::-------=====++++++******######%%%%%%%##+ 
-    :::::-------======++++++*****######%%%%%%%#+    
-          :---======++++++******#####%%#*#          
-               -==++++++******######*               
-                  =+++******#####*                  
-                    +*****######                    
-                     ****######                     
-                      *#######                      
-                       ####%#                       
-                       *#%%%*                       
-                        #%%%                        
-                        #%%+                        
-                         %%                         
-                         ##                         
-                         ++                         
-            </pre>
+            <img src="img/logo/LogoSt4rwhite.svg" alt="St4r Logo">
         </div>
         <div class="text">
-            <div class="name">St4r</div>
+            <h1 class="name">St4r</h1>
             <nav>
                 <div class="comment"># press enter to open menu</div>
                 <div class="sloganBox"><p>></p><p class="slogan"></p></div>
             </nav>
         </div>
-    </header>
+    </section>
     <script src="node_modules/typewriter-effect/dist/core.js"></script>
     <script type="module" src="script.js"></script>
 </body>
