--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font.css">
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="img/logo/Logo St4r black.svg">
     <title>St4r</title>
 </head>
 <body>
