--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
         </div>
     </section>
-    <script src="node_modules/typewriter-effect/dist/core.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
