Add of the meta tag for each page

--- a/about.html
+++ b/about.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="The information about the worker of St4r : Arthur Terrillon-Sauvageot." >
+    <meta name="keywords" content="St4r, about, information, Arthur Terrillon-Sauvageot" >
+    <meta name="author" content="Arthur Terrillon-Sauvageot" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>About</title>
