--- a/credits.html
+++ b/credits.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="The information about the tech used for the project of St4r." >
+    <meta name="keywords" content="St4r, credits" >
+    <meta name="author" content="Arthur Terrillon-Sauvageot" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Credits</title>
