--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="The home menu of the St4r company." >
+    <meta name="keywords" content="St4r, Web development, software making, Nantes" >
+    <meta name="author" content="Arthur Terrillon-Sauvageot" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/logo/Logo St4r black.svg">
+
     <title>St4r</title>
 </head>
 <body style="text-align: start;">
