--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="The contact of the St4r company." >
+    <meta name="keywords" content="St4r, contact, email" >
+    <meta name="author" content="Arthur Terrillon-Sauvageot" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Contact</title>
