Added lang in the html tag

--- a/credits.html
+++ b/credits.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="The information about the tech used for the project of St4r." >
