--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Arthur Terrillon-Sauvageot" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo/LogoSt4rblack.svg">
     <title>Contact</title>
 </head>
 <body>
